# qala

./: .bazelignore  .bazelrc  .gitignore  README.md  notes.md  qala-sdd.md
bazel-out/: stable-status.txt
bazel-qala/: MODULE.bazel  WORKSPACE.bazel  notes.md
bazel-qala/bazel-out/: volatile-status.txt
bazel-qala/contracts/events/: schema.json  topics.md
bazel-qala/contracts/openapi/: codeforge-core.yaml
bazel-qala/db/postgres/: 002_sde_management.sql  006_data_platform.sql  007_security_sem.sql  008_notifications.sql  009_kernel.sql
bazel-qala/docs/: architecture.md  sdd-traceability.md  systems-subsystems.md
bazel-qala/go/: README.md
bazel-qala/rust/ai-agents-service/: Cargo.toml
bazel-qala/rust/qala-kernel/: Cargo.toml
bazel-qala/rust/qala-kernel/src/: main.rs
bazel-qala/rust/qala-shared/: Cargo.toml
bazel-qala/scala/: build.sbt
bazel-qala/scripts/: register-services.ps1  smoke-test.ps1
bazel-qala/tools/bazel/: build_go.sh
contracts/openapi/: codeforge-core.yaml
db/postgres/: 001_user_identity.sql  003_workspace_cms.sql  004_workflow.sql  005_artifacts.sql
docs/: api-catalog.md  sdd-traceability.md  systems-subsystems.md
go/: README.md  go.mod
go/cmd/artifact-package-service/: main.go
go/cmd/sde-management-service/: main.go
go/cmd/user-identity-service/: main.go
go/cmd/workspace-cms-service/: main.go
infra/: docker-compose.yml
rust/: Cargo.toml  README.md
rust/qala-kernel/src/: state.rs
rust/security-sem-service/: Cargo.toml
rust/security-sem-service/src/: main.rs
scala/: README.md
scripts/: dev-up.ps1
(+10 files in other folders)
