[workspace]
members = [
  "qala-shared",
  "qala-kernel",
  "ai-agents-service",
  "security-sem-service"
]
resolver = "2"

[workspace.package]
edition = "2021"
license = "MIT"
authors = ["Qala Team"]

[workspace.dependencies]
axum = "0.7"
tokio = { version = "1", features = ["full"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
chrono = { version = "0.4", features = ["serde"] }
uuid = { version = "1", features = ["v4", "serde"] }
